# xpk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  Run_MaxText.md  Slurm commands guide.md  backoff_retry.sh  conftest.py  golden_buddy.sh  goldens.yaml  gpu_multi_process_run.sh  main.tf  mypy.ini  pylintrc  pyproject.toml  pytype-conf.cfg  xpk-large-scale-guide.sh  xpk-notebooks.md  xpk-slurm-commands.md  xpk.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release.yaml
.github/actions/install-crane/: action.yml
.github/actions/install-kjob/: action.yml
.github/actions/install-kueue/: action.yml
.github/actions/setup-test-env/: action.yml
.github/workflows/: README.md  a3mega-workload.yaml  a3u-workload.yaml  basic_usage_test.yaml  batch_test.yaml  build_tests.yaml  build_wheels.yaml  cleanup.yaml  cluster_create.yaml  cluster_delete.yaml  cluster_private.yaml  filestore  filestore_tests.yaml  gpu-dws-flex.yaml  integration_basic_cluster_create.yaml  integration_gpu_cluster_create.yaml  integration_legacy_tests.yaml  integration_pathways_cluster_create.yaml  integration_ray_cluster_create.yaml  integration_storage_tests.yaml  integration_tests.yaml  label-validation.yaml  lint.yml  lint_and_format.yml  nightly_tests.yaml  nightly_tests_v2.yaml  periodic_release.yaml  pylint.yml  pylint_black.yml  release_branch_versioning.yaml  reusable_batch_tests.yaml  reusable_build_actions.yaml  reusable_build_kjob.yaml  reusable_build_scripts.yaml  reusable_build_wheel.yaml  reusable_cluster_create.yaml  reusable_cluster_delete.yaml  reusable_cluster_private.yaml  reusable_filestore_tests.yaml  reusable_fuse_tests.yaml  (+19 more)
data/: Dockerfile
docs/: code-of-conduct.md  contributing.md  installation.md  local_testing.md  permissions.md  testing.md  troubleshooting.md
docs/usage/: advanced.md  autoprovisioning.md  clusters.md  cpu.md  docker.md  gpu.md  inspector.md  job.md  run.md  storage.md  workloads.md
examples/: batch.md  fake_training.py  job.sh  slurm_sample.sh  tensorflow.py  tmp.sh
examples/filestore/: attach-existing-fs-manifest.yaml
examples/llama-3.1-finetuning/: check_cuda.sh  requirements.txt  train.py  train.slurm  training_data.jsonl
examples/llama-3.1-finetuning-multi-host/: messages.py  pytorch-distributed.py  train-multi-host.slurm  train.py  train.slurm
examples/nccl/: nccl-a3mega.sh  nccl-a3ultra.sh  nccl.md
examples/nccl-batch/: README.MD  a3mega.slurm
examples/nccl-workload/: nccl.sh
examples/running-nccl/: nccl.md  nccl.sh
examples/storage/: filestore-manifest-attach.yaml  gcsfuse-manifest.yaml  lustre-manifest-attach.yaml  parallelstore-manifest-attach.yaml  pd-manifest-attach.yaml
goldens/: Basic_cluster_adapt.txt  Basic_cluster_create.txt  Batch.txt  Cluster_create_RayCluster.txt  Cluster_create_for_multi-host_nodepool.txt  Cluster_create_for_single-host_nodepool.txt  Cluster_create_for_single-host_single-slice_TPU.txt  Cluster_create_private.txt  Cluster_create_sub-slicing.txt  Cluster_create_super-slicing.txt  Cluster_create_with_CPU_and_memory_limits_above_capacity.txt  Cluster_create_with_CPU_and_memory_limits_below_capacity.txt  Cluster_create_with_Managed_Lustre_driver.txt  Cluster_create_with_Managed_Lustre_driver_and_legacy_port.txt  Cluster_create_with_gb200-4.txt  Cluster_create_with_shared_reservation.txt  Cluster_delete.txt  Cluster_delete_force.txt  Job_cancel.txt  Job_info.txt  Job_list.txt  NAP cluster-create.txt  NAP_cluster-create.txt  NAP_cluster-create_with_pathways.txt  Storage_list.txt  Workload_create.txt  Workload_create_pathways.txt  Workload_create_sub-slicing.txt  Workload_create_super-slicing.txt  Workload_create_with_output-manifest-file.txt  Workload_delete.txt  Workload_list.txt
integration/: README.md  docker_manager_test.py  gcluster_a3mega_test.py  gcluster_a3ultra_test.py  gcluster_a4_test.py  gcluster_test.py
kjob/: .gitignore  .golangci.yaml  CONTRIBUTING.md  Makefile  OWNERS  README.md  SECURITY_CONTACTS  go.mod  go.sum
kjob/.github/: dependabot.yml
kjob/hack/: update-codegen.sh
plans/: PLAN.md
recipes/: Basic_cluster_adapt.md  Basic_cluster_create.md  Cluster_create_RayCluster.md  Cluster_create_adapt_from_ct.md  Cluster_create_for_multi-host_nodepool.md  Cluster_create_for_single-host_nodepool.md  Cluster_create_private.md  Cluster_create_sub-slicing.md  Cluster_create_super-slicing.md  Cluster_create_with_CPU_and_memory_limits_above_capacity.md  Cluster_create_with_CPU_and_memory_limits_below_capacity.md  Cluster_create_with_Managed_Lustre_driver.md  Cluster_create_with_Managed_Lustre_driver_and_legacy_port.md  Cluster_create_with_gb200-4.md  Cluster_create_with_shared_reservation.md  Cluster_delete.md  Cluster_delete_force.md  NAP_cluster-create.md  NAP_cluster-create_with_pathways.md  Storage_list.md  Usage.md  Workload_create.md  Workload_create_Crane.md  Workload_create_Docker.md  Workload_create_pathways.md  Workload_create_pathways_super-slicing.md  Workload_create_sub-slicing.md  Workload_create_super-slicing.md  Workload_create_with_output-manifest-file.md  Workload_create_with_team_routing.md  Workload_delete.md  Workload_list.md  comprehensive-demo.md
slice/: .gitignore  .golangci.yml  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum  manifests.yaml
slice/cmd/: main.go
slice/deps-crds/: kustomization.yaml
slice/hack/: e2e-common.sh  e2e-test.sh  kind-cluster-subslice.yaml  kind-cluster.yaml
slice/slice-controller/: Makefile  go.mod
src/integration/: README.md  gcluster_a3mega_test.py  gcluster_a3ultra_test.py  gcluster_a4_test.py  gcluster_test.py
src/templates/: __init__.py  app_profile.yaml  slurm_job.yaml  volume_bundle.yaml
src/xpk/: README.md  __init__.py  main.py  telemetry_uploader.py  utils.py
tests/data/: fs-manifest.yaml  gcsfuse-manifest.yaml
tools/: Dockerfile  Dockerfile-kjob  build-kjob.sh  install-gke-auth-plugin.sh  install-xpk.sh  recipes.py  run-kind-tests.sh  task_logger.sh  update_dependencies.py  update_system_characteristics.py
xpk/: xpk.py
xpk_helpers/: pathways_xpk_helpers.py
(+450 files in other folders)
